# winmux

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  cliff.toml  install.ps1
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: task-8-report.md
docs/: follow-ups.md  overview.md
docs/specs/: 2026-07-06-multiplexing-mvp-design.md  2026-07-06-mvp-interfaces.md  2026-07-07-command-config-design.md  2026-07-07-command-config-interfaces.md  2026-07-07-parity-polish-design.md  2026-07-07-parity-polish-interfaces.md  2026-07-07-server-client-design.md  2026-07-07-server-client-interfaces.md
docs/superpowers/plans/: 2026-07-06-multiplexing-mvp.md  2026-07-07-command-config.md  2026-07-07-parity-polish.md  2026-07-07-server-client-sessions.md  2026-07-08-tpm-plugin-support.md  2026-07-10-sp6-tmux-parity-wave2.md  2026-07-10-sp7-parity-wave3.md
docs/tmux-reference/: choose-tree.md  commands-config-options-formats.md  copy-mode-and-buffers.md  deepwiki-cross-check.md  mouse.md  panes-and-layout.md  status-line-and-messages.md  windows-and-sessions.md
src/: app.rs  bindings.rs  buffers.rs  cli.rs  client.rs  cmd.rs  format.rs  geom.rs  grid.rs  host.rs  input.rs  keys.rs  layout.rs  lib.rs  logging.rs  main.rs  model.rs  options.rs  pipe.rs  protocol.rs  pty.rs  render.rs  server.rs  status.rs  style.rs
src/server/: cli_exec.rs  dispatch.rs
tests/: e2e.rs  e2e_config.rs  e2e_copy_mouse.rs  e2e_sessions.rs  pipe_smoke.rs  pty_smoke.rs  server_proto.rs
tests/common/: mod.rs
tests/fixtures/: user.tmux.conf
(+1 files in other folders)
