[package]
name = "winmux"
version = "0.1.0"
edition = "2021"
description = "A tmux-style terminal multiplexer for Windows, built on ConPTY"
license = "MIT"
repository = "https://github.com/ebonian/winmux"
keywords = ["tmux", "terminal", "multiplexer", "windows", "conpty"]
categories = ["command-line-utilities"]

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
regex = "1.13.0"
vte = "0.13"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Time",
    "Win32_System_WindowsProgramming",
] }
